added in a star rating feature on the single river page - removed it from the all rivers page

--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,14 @@
   <title>Hello, World</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="node_modules/sweetalert/themes/facebook/facebook.css">
 </head>
 <body>
 
   <div ui-view></div>
   
+  <script type="text/javascript" src="ngSweetAlert.js"></script>
   <script src="js/main.js"></script>
+
 </body>
 </html>
